# 3D-Navier-Stokes

./: .coveragerc  .gitattributes  .gitignore  .qcal_beacon  ADELIC_LAPLACIAN_README.md  ADELIC_NAVIER_STOKES_README.md  AI-GUIDELINES.md  AI-GUIDELINES_ES.md  AI_AGENT_SUMMARY.md  ATLAS3_ABC_QUICKSTART.md  ATLAS3_ABC_SUMMARY.txt  ATLAS3_ABC_UNIFIED_README.md  AUTHORS_QCAL.md  AXIOM_CONVERSION_SUMMARY.md  BATCH_EXECUTION_IMPLEMENTATION.md  BATCH_EXECUTION_README.md  BEACON.md  BSD.lean  BSD_ADELIC_CONNECTOR_README.md  BSD_ADELIC_IMPLEMENTATION_SUMMARY.md  BSD_IMPLEMENTATION_SUMMARY.md  BSD_QCAL_BRIDGE_DOCUMENTATION.md  BSD_QCAL_BRIDGE_DOCUMENTATION_ES.md  BSD_QCAL_BRIDGE_VISUAL_SUMMARY.txt  BSD_QCAL_IMPLEMENTATION_SUMMARY.md  BSD_RESOLUTION_QCAL_DOCUMENTATION.md  BSD_RESOLUTION_VISUAL_SUMMARY.txt  C7_COSMIC_STRING_TENSION_README.md  C7_IMPLEMENTATION_SUMMARY.md  CALIBRATION_SUMMARY.md  CELLULAR_CYTOPLASMIC_RESONANCE_README.md  CELLULAR_IMPLEMENTATION_SUMMARY.md  CELLULAR_SECURITY_SUMMARY.md  CFD_APLICACION_ES.md  CFD_APPLICATION_README.md  CIERRE_FORMAL_TRES_BRECHAS_REPORTE.md  CLAIM_OF_ORIGIN.md  COMPARISON_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY_NLS_QCAL_SARNAK.md  (+417 more)
.github/: CODEOWNERS  FUNDING.yml
01_documentacion/: CYTOPLASMIC_FLOW_MODEL.md  MODELO_DE_FLUJO_CITOPLASMICO.md
02_codigo_fuente/: hurricane_qcal_solver.py  psi_metric_hurricane_oracle.py
BSD/: QCALBridge.lean
Configuration/: docker-compose.yml  environment.yml  lakefile.lean  requirements.txt
Documentation/: CI_CD.md  CI_QUICK_REFERENCE.md  CLAY_PROOF.md  COMPUTATIONAL_LIMITATIONS.md  CONTRIBUCIONES_TECNICAS_ES.md  CONTRIBUTIONS_INDEX.md  FORMAL_PROOF_ROADMAP.md  HYBRID_BKM_CLOSURE.md  INSTALL.md  LEAN4_FORMALIZATION_STATUS.md  MATHEMATICAL_APPENDICES.md  PASO5_IMPLEMENTACION_COMPLETA_ES.md  PROOF_CERTIFICATES_IMPLEMENTATION.md  QCAL_PARAMETERS.md  QUANTUM_GEOMETRIC_PARADIGM.md  QUICKSTART_FORMAL_PROOF.md  README.md  RESOLUCION_ISSUE_LEAN4.md  ROADMAP.md  SCRIPTS_SUMMARY.md  SEELEY_DEWITT_TENSOR.md  STEP5_IMPLEMENTATION_SUMMARY.md  STEP5_UNIVERSAL_SMOOTHNESS.md  TECHNICAL_CONTRIBUTIONS.md  THEORY.md  UNIFIED_BKM_THEORY.md  UNIFIED_FRAMEWORK.md  VERIFICATION_CERTIFICATES.md  VERIFICATION_GUIDE.md  VERIFICATION_ROADMAP.md  VIBRATIONAL_REGULARIZATION.md
Lean4-Formalization/: .gitignore  DyadicRiccati.lean  FORMALIZATION_STATUS.md  MainTheorem.lean  MisalignmentDefect.lean  NavierStokes.lean  ParabolicCoercivity.lean  PsiNSE_Production_NoSorry.lean  QCAL_Unified_Theory.lean  README.md  SerrinEndpoint.lean  Tests.lean  Theorem13_7.lean  UnifiedBKM.lean  lakefile.lean
PsiNSE/: Basic.lean  CouplingTensor.lean  EnergyEstimates.lean  FrequencyEmergence.lean  GlobalRegularity.lean  IMPLEMENTATION.md  LocalExistence.lean  README.md  __init__.py  industrial_modules.py  (+3 more)
(+466 files in other folders)
